# OpenCV

./: CMakeLists.txt  README.md
include/: angularpointdetection.h  distance.h  edgedetection.h  filterwaves.h  geometry.h  geometrydetection.h  grabcut.h  grabout.h  grey.h  histogram.h  mform.h  montage.h  paint.h  picmake.h
src/: angularpointdetection.cpp  distance.cpp  edgedetection.cpp  filterwaves.cpp  geometry.cpp  geometrydetection.cpp  grabcut.cpp  grabout.cpp  grey.cpp  histogram.cpp  main.cpp  mform.cpp  montage.cpp  paint.cpp  picmake.cpp
